<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/sdkHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdk_log_hint"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        android:textColor="?attr/colorTextGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.growingio.demo.ui.widgets.AttributesRecyclerView
        android:id="@+id/attributeList"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toBottomOf="@+id/sdkHint" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/controlBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/attributeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attributeList"
        app:singleSelection="false">

        <Button
            android:id="@+id/addBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/sdk_attributes_add"
            android:textSize="16sp" />

        <Button
            android:id="@+id/subBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/sdk_attributes_sub"
            android:textSize="16sp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Button
        android:id="@+id/attributeBtn"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sdk_general_props_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/controlBtn"
        app:layout_constraintTop_toBottomOf="@+id/attributeList" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/attributeBtn" />

    <Button
        android:id="@+id/testBtn"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sdk_general_props_test_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />


</androidx.constraintlayout.widget.ConstraintLayout>